--- a/style.css
+++ b/style.css
@@ -1,1 +1,11 @@
 /* Add styles here */
+body{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+button{
+    background-color: blueviolet;font-style: oblique;text-shadow: 3px 6px 8px;
+    color:azure;
+    padding:10px 21px 10px 21px;
+    border: none;
+    border-radius: 100px 0;
+}
